# Energy-Data-Pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: deploy.yaml  main.yaml  test-lint.yaml  test.yaml
docs/: system.excalidraw
src/: async_etl.py  aws_s3.py  etl.py  sync_etl.py
src/aws/: s3.py
src/energy_data/: __init__.py  async_etl.py  async_extract.py  logs.py  redshift.py  s3.py  sync_etl.py  sync_extract.py
src/energy_data/api/: __init__.py
src/energy_data/aws/: __init__.py  dynamo.py  redshift.py
src/energy_data/etl/: sync_extract.py
src/energy_data/etl/extract/: __init__.py  async_extract.py  sync_extract.py
src/etl/: __init__.py  extract.py  sync_extract.py  transform.py
src/utils/: __init__.py  s3.py
tests/: test_one.py  test_s3.py  test_sample.py
